--- a/src/Live Auction Neural Network.ipynb
+++ b/src/Live Auction Neural Network.ipynb
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,14 +100,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "-- Execution time: 24.976967811584473 seconds ---\n"
+      "-- Execution time: 56.84995913505554 seconds ---\n"
      ]
     }
    ],
@@ -237,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -397,14 +397,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "-- Execution time: 128.16052079200745 seconds ---\n"
+      "-- Execution time: 95.06350779533386 seconds ---\n"
      ]
     }
    ],
@@ -603,7 +603,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -682,15 +682,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "--- 14.01619291305542 seconds ---\n",
-      "0.8619363395225464\n"
+      "--- 193.59356331825256 seconds ---\n",
+      "0.9640102827763496\n"
      ]
     }
    ],
@@ -699,15 +699,15 @@
     "\n",
     "#Will use Grid Search to do the cross validation.\n",
     "start_time = time.time()\n",
-    "parameters = {'subsample':[0.95],\n",
-    "              'max_depth':[2],\n",
-    "             'n_estimators':[500]}\n",
+    "parameters = {'subsample':[0.95,1],\n",
+    "              'max_depth':[2,4,6],\n",
+    "             'n_estimators':[300,500,800]}\n",
     "\n",
     "# Initialize the model.\n",
-    "clf = ensemble.GradientBoostingClassifier(max_depth=6,loss='exponential')\n",
+    "clf = ensemble.GradientBoostingClassifier(loss='exponential')\n",
     "\n",
     "#Create grid and perform 8 cross validation\n",
-    "gradient_grid = GridSearchCV(clf, parameters, cv=8, verbose=0, scoring='roc_auc')\n",
+    "gradient_grid = GridSearchCV(clf, parameters, cv=5, verbose=0, scoring='f1')\n",
     "\n",
     "#Fit the Data\n",
     "gradient_grid.fit(X_resampled, y_resampled)\n",
@@ -726,7 +726,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -735,10 +735,10 @@
      "text": [
       "             precision    recall  f1-score   support\n",
       "\n",
-      "        0.0       0.97      0.94      0.96       377\n",
-      "        1.0       0.30      0.45      0.36        20\n",
+      "        0.0       0.99      0.96      0.98       389\n",
+      "        1.0       0.27      0.75      0.40         8\n",
       "\n",
-      "avg / total       0.94      0.92      0.93       397\n",
+      "avg / total       0.98      0.95      0.96       397\n",
       "\n"
      ]
     }
@@ -755,6 +755,89 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.008071129031701861]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def Find_Optimal_Cutoff(target, predicted):\n",
+    "    \"\"\" Find the optimal probability cutoff point for a classification model related to event rate\n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    target : Matrix with dependent or target data, where rows are observations\n",
+    "\n",
+    "    predicted : Matrix with predicted data, where rows are observations\n",
+    "\n",
+    "    Returns\n",
+    "    -------     \n",
+    "    list type, with optimal cutoff value\n",
+    "\n",
+    "    \"\"\"\n",
+    "    fpr, tpr, threshold = roc_curve(target, predicted)\n",
+    "    i = np.arange(len(tpr)) \n",
+    "    roc = pd.DataFrame({'tf' : pd.Series(tpr-(1-fpr), index=i), 'threshold' : pd.Series(threshold, index=i)})\n",
+    "    roc_t = roc.ix[(roc.tf-0).abs().argsort()[:1]]\n",
+    "\n",
+    "    return list(roc_t['threshold']) \n",
+    "\n",
+    "\n",
+    "# Add prediction probability to dataframe from train set\n",
+    "gradient_train = gradient_grid.predict_proba(X_test)\n",
+    "gradient_train = [p[1] for p in gradient_train]\n",
+    "\n",
+    "# Find optimal probability threshold\n",
+    "threshold = Find_Optimal_Cutoff(y_test, gradient_train)\n",
+    "print(threshold)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Applying threshold\n",
+    "\n",
+    "gradient_prediction_proba_root = gradient_grid.predict_proba(X_test)\n",
+    "gradient_prediction_proba = [p[1] for p in gradient_prediction_proba_root]\n",
+    "\n",
+    "prediction = pd.DataFrame(gradient_prediction_proba)\n",
+    "prediction.columns = ['Probability']\n",
+    "prediction['pred'] = prediction['Probability'].map(lambda x: 1 if x > threshold[0] else 0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "             precision    recall  f1-score   support\n",
+      "\n",
+      "        0.0       1.00      0.92      0.96       389\n",
+      "        1.0       0.18      0.88      0.30         8\n",
+      "\n",
+      "avg / total       0.98      0.92      0.94       397\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(classification_report(y_test, prediction['pred']))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -763,7 +846,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -810,31 +893,12 @@
     "mlp_prediction_proba = mlp_grid.predict_proba(X_test)\n",
     "mlp_prediction_proba = [p[1] for p in mlp_prediction_proba]\n",
     "\n",
+    "#  Test Score\n",
+    "gradient_prediction = gradient_grid.predict(X_test)\n",
+    "\n",
     "# Produce the AUROC\n",
     "print(roc_auc_score(y_test, mlp_prediction_proba))\n",
     "print(\"-- Execution time: %s seconds ---\" % (time.time() - start_time))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Using scikit-neauralnetwork"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#Create outcome variable y and feature dataframe X\n",
-    "X,y = outcome_feature_split(training_set)\n",
-    "\n",
-    "# Do the test train split\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X,y,test_size=0.2)\n",
-    "\n",
-    "X_resampled, y_resampled = SMOTE().fit_sample(X_train, y_train)"
    ]
   },
   {
@@ -846,47 +910,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NotImplementedError",
-     "evalue": "No backend sub-module imported.",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNotImplementedError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-8-24ba58fa3a9c>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      5\u001b[0m                 ae.Layer(\"Sigmoid\", units=64)],\n\u001b[1;32m      6\u001b[0m             \u001b[0mlearning_rate\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m0.002\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 7\u001b[0;31m             n_iter=10)\n\u001b[0m\u001b[1;32m      8\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0;31m# Layerwise pre-training using only the input data.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/opt/conda/lib/python3.6/site-packages/sknn/nn.py\u001b[0m in \u001b[0;36m__init__\u001b[0;34m(self, layers, warning, parameters, random_state, learning_rule, learning_rate, learning_momentum, normalize, regularize, weight_decay, dropout_rate, batch_size, n_iter, n_stable, f_stable, valid_set, valid_size, loss_type, callback, debug, verbose, **params)\u001b[0m\n\u001b[1;32m    511\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_backend\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    512\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_create_logger\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 513\u001b[0;31m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_setup\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    514\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    515\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0m_setup\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/opt/conda/lib/python3.6/site-packages/sknn/ae.py\u001b[0m in \u001b[0;36m_setup\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m     99\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    100\u001b[0m         \u001b[0mbackend\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msetup\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 101\u001b[0;31m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_backend\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mbackend\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mAutoEncoderBackend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    102\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    103\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mfit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mX\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/opt/conda/lib/python3.6/site-packages/sknn/backend/__init__.py\u001b[0m in \u001b[0;36m__init__\u001b[0;34m(self, _)\u001b[0m\n\u001b[1;32m     16\u001b[0m \u001b[0;32mclass\u001b[0m \u001b[0mAutoEncoderBackend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mobject\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     17\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0m__init__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0m_\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 18\u001b[0;31m         \u001b[0;32mraise\u001b[0m \u001b[0mNotImplementedError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"No backend sub-module imported.\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     19\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     20\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNotImplementedError\u001b[0m: No backend sub-module imported."
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "--- 172.67300868034363 seconds ---\n",
+      "0.8763134851138353\n"
      ]
     }
    ],
    "source": [
-    "# Initialize auto-encoder for unsupervised learning.\n",
-    "myae = ae.AutoEncoder(\n",
-    "            layers=[\n",
-    "                ae.Layer(\"Tanh\", units=128),\n",
-    "                ae.Layer(\"Sigmoid\", units=64)],\n",
-    "            learning_rate=0.002,\n",
-    "            n_iter=10)\n",
+    "####################### Gradient Boost Model ################################################\n",
     "\n",
-    "# Layerwise pre-training using only the input data.\n",
-    "myae.fit(X_resampled)\n",
+    "#Will use Grid Search to do the cross validation.\n",
+    "start_time = time.time()\n",
+    "parameters = {'subsample':[0.95,1],\n",
+    "              'max_depth':[2,4,6],\n",
+    "             'n_estimators':[300,500,800]}\n",
     "\n",
-    "# Initialize the multi-layer perceptron with same base layers.\n",
-    "mymlp = mlp.Classifier(\n",
-    "            layers=[\n",
-    "                mlp.Layer(\"Tanh\", units=128),\n",
-    "                mlp.Layer(\"Sigmoid\", units=64),\n",
-    "                mlp.Layer(\"Linear\")])\n",
+    "# Initialize the model.\n",
+    "clf = ensemble.GradientBoostingClassifier(loss='exponential')\n",
     "\n",
-    "# Transfer the weights from the auto-encoder.\n",
-    "myae.transfer(mymlp)\n",
-    "# Now perform supervised-learning as usual.\n",
-    "mymlp.fit(X_resampled, y_resampled)"
+    "#Create grid and perform 8 cross validation\n",
+    "gradient_grid = GridSearchCV(clf, parameters, cv=5, verbose=0, scoring='f1')\n",
+    "\n",
+    "#Fit the Data\n",
+    "gradient_grid.fit(X_resampled, y_resampled)\n",
+    "print(\"--- %s seconds ---\" % (time.time() - start_time))\n",
+    "\n",
+    "\n",
+    "#  Test Score\n",
+    "gradient_prediction = gradient_grid.predict(X_test)\n",
+    "\n",
+    "gradient_prediction_proba = gradient_grid.predict_proba(X_test)\n",
+    "gradient_prediction_proba = [p[1] for p in gradient_prediction_proba]\n",
+    "\n",
+    "# Produce the AUROC\n",
+    "print(roc_auc_score(y_test, gradient_prediction_proba))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "             precision    recall  f1-score   support\n",
+      "\n",
+      "        0.0       0.98      0.94      0.96       571\n",
+      "        1.0       0.31      0.62      0.41        24\n",
+      "\n",
+      "avg / total       0.96      0.93      0.94       595\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(classification_report(y_test, gradient_prediction))"
    ]
   },
   {
